section jump fix

--- a/src/index.css
+++ b/src/index.css
@@ -66,4 +66,5 @@ button:focus-visible {
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: calc(var(--header-height));
 }
