--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -10,5 +10,7 @@
 
     --small-font: 16px;
     --med-font: 22px;
+
+    --header-height: 64px;
 }
 
